# piratejam

./: Cargo.toml
.github/workflows/: ci.yaml  release.yaml
assets/: palm.tile.ron  pebble.tile.ron  stone.tile.ron  tilemap_shader.wgsl
src/: controls.rs  main.rs  ui.rs
src/baddies/: mod.rs
src/bevy_fast_tilemap/: bundle.rs  map.rs  map_builder.rs  map_uniform.rs  mod.rs  plugin.rs  shader.rs
src/gamepad/: mod.rs
src/player/: mod.rs
src/worldgen/: mod.rs
